<resources>
  <string name="app_name">Latin Reader</string>
  <string name="developer_site">telpirion.com</string>
  <string name="app_description">
    The Latin Reader provides a selection of famous classical texts in both
    Latin and English. This app includes an integrated dictionary and vocabulary
    builder functions. The app is available for use without any fees or ads.
    \n\n
    Source texts are provided by the Perseus project (www.perseus.tufts.edu).
  </string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="nav_drawer_recent">Recent</string>
  <string name="nav_drawer_library">Library</string>
  <string name="nav_drawer_translations">Translations</string>
  <string name="nav_drawer_dictionary">Dictionary</string>
  <string name="nav_drawer_vocab">Vocabulary</string>
  <string name="nav_drawer_help">Help</string>
  <string name="nav_drawer_info">About</string>

  <string name="action_settings">Settings</string>
  <string name="action_dictionary">Dictionary</string>

  <string name="pref_text_size">Text Size</string>
  <string name="pref_text_size_summary">Change the size of the text on
    the reading page.</string>
  <string name="pref_text_size_default">20</string>
  <string name="pref_poem_lines">Poem Lines Per Page</string>
  <string name="pref_poem_lines_summary">Change the number of poem lines shown
    on the reading page.</string>
  <string name="pref_poem_lines_default">5</string>
  <string name="pref_show_page_controls">Show Page Controls</string>
  <string name="pref_show_page_controls_summary">Change whether the previous and
    next page buttons are shown on the reading page.
  </string>

  <string name="reading_no_book_open">Go to the Library to open a book!</string>
  <string name="reading_book_page_of_pages">Book %1$d, page %2$d of %3$d</string>
  <string name="reading_page_of_pages">Page %1$d of %2$d</string>
  <string name="reading_btn_prev">Previous page</string>
  <string name="reading_btn_next">Next page</string>

  <string name="dictionary_query_hint">Enter word to look up</string>
  <string name="dictionary_query_hint_short">Lookup word</string>
  <string name="dictionary_query_no_results">No results found.</string>
  <string name="dictionary_query_submit">Search</string>

  <string name="error_activity">Error</string>
  <string name="error_activity_title">I\'m really sorry - there was an error</string>
  <string name="error_activity_explanation">Something bad happened and the app needs to close. The information below shows the gnarly details.</string>
  <string name="default_error_message">No details to show.</string>

  <string name="context_menu_translation">Show translation</string>
  <string name="context_menu_source">Show source text</string>
  <string name="context_menu_toc">View table of contents</string>

  <string name="toc_subtitle">Contents:</string>
  <string name="action_display">Library display</string>
  <string name="action_display_row">List</string>
    <string name="action_display_description">Switch the display of works in the library between list and grid.</string>
</resources>
