<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:key="textSize"
        android:title="@string/pref_text_size"
        android:summary="@string/pref_text_size_summary"
        android:entryValues="@array/pref_array"
        android:entries="@array/pref_array"
        android:defaultValue="@string/pref_text_size_default"
        app:iconSpaceReserved="false"/>
    <ListPreference
        android:key="poemLines"
        android:title="@string/pref_poem_lines"
        android:summary="@string/pref_poem_lines_summary"
        android:entryValues="@array/poem_lines_array"
        android:entries="@array/poem_lines_array"
        android:defaultValue="@string/pref_poem_lines_default"
        app:iconSpaceReserved="false"/>
    <CheckBoxPreference
        android:key="showPageControls"
        android:title="@string/pref_show_page_controls"
        android:summary="@string/pref_show_page_controls_summary"
        android:defaultValue="true"
        app:iconSpaceReserved="false"/>

</PreferenceScreen>