<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/reading_dest"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/nav_drawer_recent"/>
        <item
            android:id="@+id/libraryFragment"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/nav_drawer_library" />
        <item
            android:id="@+id/nav_translation"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/nav_drawer_translations" />
        <item
            android:id="@+id/dictionary_dest"
            android:icon="@drawable/ic_find_in_page_black_24dp"
            android:title="@string/nav_drawer_dictionary" />
        <item
            android:id="@+id/vocab_dest"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/nav_drawer_vocab" />
    </group>

    <group android:id="@+id/nav_group_2">
        <item
            android:id="@+id/settings_dest"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"/>
        <item
            android:id="@+id/help_dest"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/nav_drawer_help"/>
        <item android:id="@+id/info_dest"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/nav_drawer_info"/>
    </group>
</menu>
